# my-game-of-life

./: .gitignore  README.md  main.py  pyproject.toml
my_game_of_life/: GameOfLife.py
tests/: test_my_game_of_life.py
