[tool.poetry]
name = "my-game-of-life"
version = "0.1.0"
description = ""
authors = ["Ale Sánchez <alesanchez@us.es>"]

[tool.poetry.dependencies]
python = "^3.6"
sortedcontainers = "^2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
